force-app/main/default/objects/Purchase_Requisition_Line__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Purchase Requisition Line</relationshipLabel>
    <relationshipName>Purchase_Requisition_Line</relationshipName>
    <type>Lookup</type>
</CustomField>