force-app/main/default/objects/Purchase_Requisition_Line__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Purchase Requisition Line</relationshipLabel>
    <relationshipName>Purchase_Requisition_Line</relationshipName>
    <type>Lookup</type>
</CustomField>