force-app/main/default/objects/Purchase_Requisition_Line__c/fields/Purchase_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Requisition__c</fullName>
    <label>Purchase Requisition</label>
    <referenceTo>Purchase_Requisition__c</referenceTo>
    <relationshipLabel>Purchase Requisition Line</relationshipLabel>
    <relationshipName>Purchase_Requisition_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>